# ShantyLocker

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
cmake/: FindXCB-EWMH.cmake  FindXCB-UTIL.cmake  FindXCB.cmake
include/: obscure.h  xcbutil.h
obscure/: obscure.cpp
xcbutil/: xcbutil.cpp
